src/objects/CS_Staging_Transcript__c.object
<CustomObject>
    <description>Staging object for Cornerstone integration</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the user have an active CSOD account?</description>
        <inlineHelpText>Does the user have an active CSOD account?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line__c</fullName>
        <label>Address Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSOD_ID__c</fullName>
        <description>Cornerstone Training ID</description>
        <inlineHelpText>Cornerstone Training ID</inlineHelpText>
        <label>CSOD_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Activity__c</fullName>
        <description>Cornerstone Activity Name</description>
        <inlineHelpText>Cornerstone Activity Name</inlineHelpText>
        <label>CS Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Last_Modified_Date__c</fullName>
        <description>CS Last Modified Date</description>
        <inlineHelpText>CS Last Modified Date</inlineHelpText>
        <label>CS Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_REC_ID__c</fullName>
        <description>Cornerstone ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Cornerstone ID</inlineHelpText>
        <label>CS_REC_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_User_ID__c</fullName>
        <description>Cornerstone Unique User Id</description>
        <inlineHelpText>Cornerstone Unique User Id</inlineHelpText>
        <label>CS_User_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company as assigned in CSOD</description>
        <inlineHelpText>Company as assigned in CSOD</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compass_Id__c</fullName>
        <description>Compass ID</description>
        <inlineHelpText>Compass ID</inlineHelpText>
        <label>Compass Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Language__c</fullName>
        <description>What language does this user speak?</description>
        <inlineHelpText>What language does this user speak?</inlineHelpText>
        <label>Display Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Parent__c</fullName>
        <description>Internal or External</description>
        <inlineHelpText>Internal or External</inlineHelpText>
        <label>Division Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Cornerstone Activity End Date</description>
        <inlineHelpText>Cornerstone Activity End Date</inlineHelpText>
        <label>Transcript End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <description>Cornerstone Enrollment Date</description>
        <inlineHelpText>Cornerstone Enrollment Date</inlineHelpText>
        <label>Enrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Country, State</description>
        <inlineHelpText>Country, State</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_Assignment_Date__c</fullName>
        <description>Date PEP was assigned by admin</description>
        <inlineHelpText>Date PEP was assigned by admin</inlineHelpText>
        <label>PEP Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEP_Enrolled__c</fullName>
        <description>PEP User? Y/N</description>
        <inlineHelpText>PEP User? Y/N</inlineHelpText>
        <label>PEP Enrolled</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_Extension_Days__c</fullName>
        <description># days PEP extension</description>
        <inlineHelpText># days PEP extension</inlineHelpText>
        <label>PEP Extension (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEP_Transferred_from_another_user__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PEP Transferred from another user</description>
        <inlineHelpText>PEP Transferred from another user</inlineHelpText>
        <label>PEP Transferred from another user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PEP_assigned_by__c</fullName>
        <description>Admin who assigned PEP originally</description>
        <inlineHelpText>Admin who assigned PEP originally</inlineHelpText>
        <label>PEP assigned by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_end_date__c</fullName>
        <description>PEP end date</description>
        <inlineHelpText>PEP end date</inlineHelpText>
        <label>PEP end date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEP_start_Date__c</fullName>
        <description>PEP start Date</description>
        <inlineHelpText>PEP start Date</inlineHelpText>
        <label>PEP start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedMessage__c</fullName>
        <description>Processed  Message from SF Batch</description>
        <inlineHelpText>Processed Message from SF Batch</inlineHelpText>
        <label>Processed Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>Quote</description>
        <inlineHelpText>Quote</inlineHelpText>
        <label>Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scopus_ID__c</fullName>
        <description>Scopus ID</description>
        <inlineHelpText>Scopus ID</inlineHelpText>
        <label>Scopus ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Transcript Status</description>
        <inlineHelpText>Transcript Status</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>Training Type</description>
        <inlineHelpText>Cornerstone Training Type</inlineHelpText>
        <label>Training Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcript_Completed_Date__c</fullName>
        <description>Transcript Completed Date</description>
        <inlineHelpText>Transcript Completed Date</inlineHelpText>
        <label>Transcript Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transcript_Due_Date__c</fullName>
        <description>Transcript Due Date</description>
        <inlineHelpText>Transcript Due Date</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transcript_Registration_Date__c</fullName>
        <description>Transcript Registration Date</description>
        <inlineHelpText>Transcript Registration Date</inlineHelpText>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <description>User First Name</description>
        <inlineHelpText>User First Name</inlineHelpText>
        <label>User First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Fullname__c</fullName>
        <description>Training Type</description>
        <inlineHelpText>User Full Name</inlineHelpText>
        <label>User Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Login__c</fullName>
        <description>User Last Login</description>
        <inlineHelpText>User Last Login</inlineHelpText>
        <label>User Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <description>User Last Name</description>
        <inlineHelpText>User Last Name</inlineHelpText>
        <label>User Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <description>Active/Inactive</description>
        <inlineHelpText>Active/Inactive</inlineHelpText>
        <label>User Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flagged by a batch</description>
        <inlineHelpText>flagged by a batch</inlineHelpText>
        <label>hasError</label>
        <type>Checkbox</type>
    </fields>
    <label>CS Staging Transcript</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>CS_Last_Modified_Date__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Scopus_ID__c</columns>
        <columns>Compass_Id__c</columns>
        <columns>Company_Name__c</columns>
        <columns>User_Email__c</columns>
        <columns>Transcript_Registration_Date__c</columns>
        <columns>CS_Activity__c</columns>
        <columns>hasError__c</columns>
        <columns>Processed__c</columns>
        <columns>ErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Last_Modified_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/21/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_By_Alla</fullName>
        <columns>NAME</columns>
        <columns>CS_Activity__c</columns>
        <columns>CS_Last_Modified_Date__c</columns>
        <columns>Transcript_Registration_Date__c</columns>
        <columns>Scopus_ID__c</columns>
        <columns>Training_Type__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>APP</value>
        </filters>
        <filters>
            <field>Scopus_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Training_Type__c</field>
            <operation>notContain</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Fail</value>
        </filters>
        <label>All by Integration</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_By_SVC</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CS_Activity__c</columns>
        <columns>CS_Last_Modified_Date__c</columns>
        <columns>User_Email__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>Status__c</columns>
        <columns>Transcript_Completed_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Email__c</field>
            <operation>equals</operation>
            <value>ermoreno@microstrategy.com</value>
        </filters>
        <label>All by Alla</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Internal_Users1</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CST-{0000000}</displayFormat>
        <label>CS Staging Transcript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Staging Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>